[project]
name = "kb-vault"
version = "0.1.0"
description = "Obsidian vault markdown scanner and FTS indexer for the kb stack."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kb-core",
    "pydantic>=2.13.4",
    "sqlite-utils>=3.39",
    "typer>=0.21.2",
]

[project.scripts]
kb-vault = "kb_vault.cli:kb_vault_cli"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.uv.sources]
kb-core = { git = "https://github.com/Willmo103/kb-core.git" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]
